feat: save post parameter

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,12 +11,12 @@
         <form method="POST" action="/quizzes/create">
             <div>
                 <label>amount</label>
-                <input name="amount" type="number">
+                <input name="amount" type="number" value="">
             </div>
 
             <div>
                 <label>答え</label>
-                <input name="answer" type="number">
+                <input name="answer" type="text" value="">
             </div>
             <input type="submit">
         </form>
