--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,86 @@
 <!DOCTYPE html>
-<html>
+<html lang="jp">
     <head>
-        <meta charset="UTF-8">
-        <title></title>
+        <title>Quiz BitCoin Cash Challenge ~Bチーム~</title>
+        <!-- https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/cerulean/bootstrap.min.css -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
     </head>
     <body>
+    <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Quiz BitCoin Cash Challenge ~Bチーム~</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <form class="navbar-form navbar-right">
+                    <div class="form-group">
+                        <input type="text" placeholder="Email" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <input type="password" placeholder="Password" class="form-control">
+                    </div>
+                    <button type="submit" class="btn btn-success">Sign in</button>
+                </form>
+            </div>
+            <!--/.navbar-collapse -->
+        </div>
+    </nav>
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Quiz BitCoin Cash Challenge</h1>
+            <p>クイズに答えてBTCをゲットしよう！</p>
+            <p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more &#187;</a>
+            </p>
+        </div>
+    </div>
+    <div class="container">
+        <!-- Example row of columns -->
         <div><%- message %></div>
 
-        <h1>B-Chan</h1>
-        <form method="POST" action="/quizzes/create">
-            <div>
-                <label>amount</label>
-                <input name="bounty" type="number" value="">
-            </div>
-
-            <div>
-                <label>答え</label>
-                <input name="portKey" type="text" value="">
-            </div>
-            <input type="submit">
-        </form>
+        <div class="row">
+            <form method="POST" action="/quizzes/create">
+                <div class="form-group">
+                    <label for="exampleInputEmail1">賞金額(amount)</label>
+                    <input type="number" name="bounty" value="" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted">クイズの正解者にあげる賞金の量</small>
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">クイズの答え(quiz answer)</label>
+                    <input type="text" name="portKey" value="" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+        <hr>
+        <footer>
+            <p>&#169; 2016 Company, Inc.</p>
+        </footer>
+    </div>
+    <!-- /container -->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     </body>
 </html>
